--- a/FinancialSuperman/Base.lproj/Main.storyboard
+++ b/FinancialSuperman/Base.lproj/Main.storyboard
@@ -1250,7 +1250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RQR-yu-1EO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1339" y="-845"/>
+            <point key="canvasLocation" x="-2547" y="-829"/>
         </scene>
         <!--Me Commission View Controller-->
         <scene sceneID="qzx-v0-QzA">
@@ -2364,6 +2364,79 @@
             </objects>
             <point key="canvasLocation" x="-615" y="-2629.9999999999995"/>
         </scene>
+        <!--Me Order Detail View Controller-->
+        <scene sceneID="SGv-sX-YGb">
+            <objects>
+                <viewController id="VZq-jl-045" customClass="MeOrderDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9GX-Cq-a6M"/>
+                        <viewControllerLayoutGuide type="bottom" id="DYZ-TP-6VK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uHD-te-r6j">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xeJ-cw-Xd2">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" red="0.88319463320000002" green="0.88319463320000002" blue="0.88319463320000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="orderDetailCellIOnedentifier" id="l2g-5Y-7TU">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l2g-5Y-7TU" id="OZQ-GP-7rb">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKN-Nn-wUe">
+                                                    <rect key="frame" x="8" y="12" width="194" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="product_trade_detail_title_btn_normal.png" translatesAutoresizingMaskIntoConstraints="NO" id="Jz0-ZL-Gny">
+                                                    <rect key="frame" x="292" y="12" width="20" height="20"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="orderDetailCellITwodentifier" id="tXd-KZ-20j">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tXd-KZ-20j" id="Hga-hF-IQh">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S93-aq-hi0">
+                                                    <rect key="frame" x="8" y="12" width="79" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Pp-iY-i42">
+                                                    <rect key="frame" x="95" y="12" width="217" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="VZq-jl-045" id="O7W-ga-JI6"/>
+                                    <outlet property="delegate" destination="VZq-jl-045" id="3LN-Dw-8K0"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="VSt-uk-D5m"/>
+                    <connections>
+                        <outlet property="tableView" destination="xeJ-cw-Xd2" id="Imn-sR-LUN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HVv-c8-RPX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1799" y="-1010"/>
+        </scene>
         <!--Common Navigation Controller-->
         <scene sceneID="9m7-ug-msM">
             <objects>
@@ -2404,6 +2477,7 @@
                         <segue destination="5Qf-hw-j1D" kind="push" identifier="userLoginIdentifier" id="EU7-uj-K2h"/>
                         <segue destination="Ao5-L1-iho" kind="push" identifier="meInfoViewIdentifier" id="bYg-x5-cAU"/>
                         <segue destination="zzB-wL-RrJ" kind="push" identifier="addBankCardIdentifier" id="IGE-eL-Ov3"/>
+                        <segue destination="VZq-jl-045" kind="push" identifier="orderDetailIdentifier" id="RAZ-LU-kmm"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -2431,6 +2505,7 @@
         <image name="icon_search_normal.png" width="23" height="23"/>
         <image name="icon_sort_down.png" width="14" height="16"/>
         <image name="icon_sort_up.png" width="14" height="15"/>
+        <image name="product_trade_detail_title_btn_normal.png" width="40" height="40"/>
         <image name="sec_session_sending_icon.png" width="13" height="10"/>
         <image name="seting_confirm_btn_normal.png" width="600" height="88"/>
         <image name="share_card_body.png" width="320" height="108"/>
